--- a/src/pages/Resources/Resources.module.css
+++ b/src/pages/Resources/Resources.module.css
@@ -73,7 +73,7 @@
 
 .table {
   margin: 10px;
-  height: calc(100% - 86px);
+  height: calc(100% - 80px);
 }
 
 .rows {
